--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: android
 dist: trusty
+os: linux
 
 android:
   licenses:
@@ -28,8 +29,6 @@ before_install:
 env:
   global:
     - MALLOC_ARENA_MAX=2
-
-sudo: required
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a -s "768x1280"
