--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,17 @@
     package="hu.csmark.jobsearcher">
 
     <application
+        android:name=".JobSearcherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.create_job.CreateJobActivity"></activity>
+        <activity android:name=".ui.job_details.JobDetailsActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.jobs_list.JobsListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
