--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,8 @@ dependencies {
     apply plugin: 'idea'
     kapt "com.google.dagger:dagger-compiler:2.32"
     kapt "com.google.dagger:dagger-android-processor:2.32"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
