--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="hu.csmark.jobsearcher">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".JobSearcherApplication"
@@ -9,8 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.create_job.CreateJobActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity android:name=".ui.create_job.CreateJobActivity" />
         <activity android:name=".ui.job_details.JobDetailsActivity" />
         <activity
             android:name=".ui.jobs_list.JobsListActivity"
