--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.room:room-runtime:2.2.2'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -48,6 +49,7 @@ dependencies {
     implementation "com.google.dagger:dagger:2.32"
     implementation "com.google.dagger:dagger-android:2.32"
     implementation "com.google.dagger:dagger-android-support:2.32"
+    annotationProcessor 'androidx.room:room-compiler:2.2.2'
     apply plugin: 'idea'
     apply plugin: 'idea'
     kapt "com.google.dagger:dagger-compiler:2.32"
