--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation 'androidx.room:room-runtime:2.2.2'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -49,7 +48,6 @@ dependencies {
     implementation "com.google.dagger:dagger:2.32"
     implementation "com.google.dagger:dagger-android:2.32"
     implementation "com.google.dagger:dagger-android-support:2.32"
-    annotationProcessor 'androidx.room:room-compiler:2.2.2'
     apply plugin: 'idea'
     apply plugin: 'idea'
     kapt "com.google.dagger:dagger-compiler:2.32"
@@ -58,4 +56,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
 }
