--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -41,9 +45,26 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    testImplementation 'junit:junit:4.13'
+    implementation "androidx.test:core:1.3.0"
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestUtil 'androidx.test:orchestrator:1.3.0'
+
+    testImplementation 'org.robolectric:robolectric:4.2.1'
+    testImplementation 'org.mockito:mockito-core:3.1.0'
+    testImplementation 'com.google.dagger:dagger:2.32'
+    testAnnotationProcessor "com.google.dagger:dagger-compiler:2.32"
+    testCompileOnly 'javax.annotation:jsr250-api:1.0'
+
+    androidTestImplementation 'org.mockito:mockito-core:3.1.0'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.google.dagger:dagger:2.32'
+    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:2.32"
+    androidTestCompileOnly 'javax.annotation:jsr250-api:1.0'
 
     implementation "com.google.dagger:dagger:2.32"
     implementation "com.google.dagger:dagger-android:2.32"
@@ -61,4 +82,5 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
+
 }
